fastapi_practice/k8s/model-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-model-deployment
  labels:
    app: fraud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fraud
  template:
    metadata:
      labels:
        app: fraud
    spec:
      containers:
        - name: fraud
          image: slavkostrov/fraud_model:latest
          ports:
            - containerPort: 8000
