fastapi_practice/k8s/model-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fraud-model-service
  labels:
    app: fraud
spec:
  selector:
    app: fraud
  ports:
    - name: fraud
      protocol: TCP
      port: 8000
  type: LoadBalancer # need it for public ip in YC
