fastapi_practice/k8s/fraud-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fraud-model-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: slavkostrov.otus-bigdata-k8s.filonovpv.name
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: fraud-model-service
              port:
                number: 80
